pgen/y.output
Terminals unused in grammar

    LIT


Grammar

    0 $accept: spec $end

    1 spec: defs MARK rules

    2 defs: ε
    3     | defs def

    4 def: NODE nlist

    5 nlist: yid
    6      | nlist yid
    7      | nlist ',' yid

    8 yid: IDENTIFIER
    9    | LITERAL

   10 rules: rule
   11      | rules rule

   12 rule: IDENTIFIER OR rbody ';'
   13     | IDENTIFIER OR rbody ACTION STRING ';'
   14     | IDENTIFIER OR rbody or ';'
   15     | IDENTIFIER OR rbody ACTION STRING or ';'

   16 or: OR rbody
   17   | OR rbody ACTION STRING
   18   | or OR rbody
   19   | or OR rbody ACTION STRING

   20 rbody: ε
   21      | rexp

   22 rexp: term
   23     | PIPE term
   24     | rexp PIPE term

   25 term: fact
   26     | term fact

   27 fact: prim
   28     | prim rop

   29 prim: yid
   30     | '(' rexp ')'

   31 rop: PLUS
   32    | STAR
   33    | QUESTION
   34    | LIST prim


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 30
    ')' (41) 30
    ',' (44) 7
    ';' (59) 12 13 14 15
    error (256)
    MARK <info> (258) 1
    NODE <info> (259) 4
    OR <info> (260) 12 13 14 15 16 17 18 19
    LIST <info> (261) 34
    ACTION <info> (262) 13 15 17 19
    IDENTIFIER <info> (263) 8 12 13 14 15
    LITERAL <info> (264) 9
    STRING <info> (265) 13 15 17 19
    LIT <info> (266)
    PIPE <info> (267) 23 24
    STAR <info> (268) 32
    PLUS <info> (269) 31
    QUESTION <info> (270) 33


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    spec <nodeptr> (21)
        on left: 1
        on right: 0
    defs <nodeptr> (22)
        on left: 2 3
        on right: 1 3
    def <nodeptr> (23)
        on left: 4
        on right: 3
    nlist <nodeptr> (24)
        on left: 5 6 7
        on right: 4 6 7
    yid <nodeptr> (25)
        on left: 8 9
        on right: 5 6 7 29
    rules <nodeptr> (26)
        on left: 10 11
        on right: 1 11
    rule <nodeptr> (27)
        on left: 12 13 14 15
        on right: 10 11
    or <nodeptr> (28)
        on left: 16 17 18 19
        on right: 14 15 18 19
    rbody <nodeptr> (29)
        on left: 20 21
        on right: 12 13 14 15 16 17 18 19
    rexp <nodeptr> (30)
        on left: 22 23 24
        on right: 21 24 30
    term <nodeptr> (31)
        on left: 25 26
        on right: 22 23 24 26
    fact <nodeptr> (32)
        on left: 27 28
        on right: 25 26
    prim <nodeptr> (33)
        on left: 29 30
        on right: 27 28 34
    rop <nodeptr> (34)
        on left: 31 32 33 34
        on right: 28


State 0

    0 $accept: • spec $end

    $default  reduce using rule 2 (defs)

    spec  go to state 1
    defs  go to state 2


State 1

    0 $accept: spec • $end

    $end  shift, and go to state 3


State 2

    1 spec: defs • MARK rules
    3 defs: defs • def

    MARK  shift, and go to state 4
    NODE  shift, and go to state 5

    def  go to state 6


State 3

    0 $accept: spec $end •

    $default  accept


State 4

    1 spec: defs MARK • rules

    IDENTIFIER  shift, and go to state 7

    rules  go to state 8
    rule   go to state 9


State 5

    4 def: NODE • nlist

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11

    nlist  go to state 12
    yid    go to state 13


State 6

    3 defs: defs def •

    $default  reduce using rule 3 (defs)


State 7

   12 rule: IDENTIFIER • OR rbody ';'
   13     | IDENTIFIER • OR rbody ACTION STRING ';'
   14     | IDENTIFIER • OR rbody or ';'
   15     | IDENTIFIER • OR rbody ACTION STRING or ';'

    OR  shift, and go to state 14


State 8

    1 spec: defs MARK rules •
   11 rules: rules • rule

    IDENTIFIER  shift, and go to state 7

    $default  reduce using rule 1 (spec)

    rule  go to state 15


State 9

   10 rules: rule •

    $default  reduce using rule 10 (rules)


State 10

    8 yid: IDENTIFIER •

    $default  reduce using rule 8 (yid)


State 11

    9 yid: LITERAL •

    $default  reduce using rule 9 (yid)


State 12

    4 def: NODE nlist •
    6 nlist: nlist • yid
    7      | nlist • ',' yid

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    ','         shift, and go to state 16

    $default  reduce using rule 4 (def)

    yid  go to state 17


State 13

    5 nlist: yid •

    $default  reduce using rule 5 (nlist)


State 14

   12 rule: IDENTIFIER OR • rbody ';'
   13     | IDENTIFIER OR • rbody ACTION STRING ';'
   14     | IDENTIFIER OR • rbody or ';'
   15     | IDENTIFIER OR • rbody ACTION STRING or ';'

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    PIPE        shift, and go to state 18
    '('         shift, and go to state 19

    $default  reduce using rule 20 (rbody)

    yid    go to state 20
    rbody  go to state 21
    rexp   go to state 22
    term   go to state 23
    fact   go to state 24
    prim   go to state 25


State 15

   11 rules: rules rule •

    $default  reduce using rule 11 (rules)


State 16

    7 nlist: nlist ',' • yid

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11

    yid  go to state 26


State 17

    6 nlist: nlist yid •

    $default  reduce using rule 6 (nlist)


State 18

   23 rexp: PIPE • term

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    '('         shift, and go to state 19

    yid   go to state 20
    term  go to state 27
    fact  go to state 24
    prim  go to state 25


State 19

   30 prim: '(' • rexp ')'

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    PIPE        shift, and go to state 18
    '('         shift, and go to state 19

    yid   go to state 20
    rexp  go to state 28
    term  go to state 23
    fact  go to state 24
    prim  go to state 25


State 20

   29 prim: yid •

    $default  reduce using rule 29 (prim)


State 21

   12 rule: IDENTIFIER OR rbody • ';'
   13     | IDENTIFIER OR rbody • ACTION STRING ';'
   14     | IDENTIFIER OR rbody • or ';'
   15     | IDENTIFIER OR rbody • ACTION STRING or ';'

    OR      shift, and go to state 29
    ACTION  shift, and go to state 30
    ';'     shift, and go to state 31

    or  go to state 32


State 22

   21 rbody: rexp •
   24 rexp: rexp • PIPE term

    PIPE  shift, and go to state 33

    $default  reduce using rule 21 (rbody)


State 23

   22 rexp: term •
   26 term: term • fact

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    '('         shift, and go to state 19

    $default  reduce using rule 22 (rexp)

    yid   go to state 20
    fact  go to state 34
    prim  go to state 25


State 24

   25 term: fact •

    $default  reduce using rule 25 (term)


State 25

   27 fact: prim •
   28     | prim • rop

    LIST      shift, and go to state 35
    STAR      shift, and go to state 36
    PLUS      shift, and go to state 37
    QUESTION  shift, and go to state 38

    $default  reduce using rule 27 (fact)

    rop  go to state 39


State 26

    7 nlist: nlist ',' yid •

    $default  reduce using rule 7 (nlist)


State 27

   23 rexp: PIPE term •
   26 term: term • fact

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    '('         shift, and go to state 19

    $default  reduce using rule 23 (rexp)

    yid   go to state 20
    fact  go to state 34
    prim  go to state 25


State 28

   24 rexp: rexp • PIPE term
   30 prim: '(' rexp • ')'

    PIPE  shift, and go to state 33
    ')'   shift, and go to state 40


State 29

   16 or: OR • rbody
   17   | OR • rbody ACTION STRING

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    PIPE        shift, and go to state 18
    '('         shift, and go to state 19

    $default  reduce using rule 20 (rbody)

    yid    go to state 20
    rbody  go to state 41
    rexp   go to state 22
    term   go to state 23
    fact   go to state 24
    prim   go to state 25


State 30

   13 rule: IDENTIFIER OR rbody ACTION • STRING ';'
   15     | IDENTIFIER OR rbody ACTION • STRING or ';'

    STRING  shift, and go to state 42


State 31

   12 rule: IDENTIFIER OR rbody ';' •

    $default  reduce using rule 12 (rule)


State 32

   14 rule: IDENTIFIER OR rbody or • ';'
   18 or: or • OR rbody
   19   | or • OR rbody ACTION STRING

    OR   shift, and go to state 43
    ';'  shift, and go to state 44


State 33

   24 rexp: rexp PIPE • term

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    '('         shift, and go to state 19

    yid   go to state 20
    term  go to state 45
    fact  go to state 24
    prim  go to state 25


State 34

   26 term: term fact •

    $default  reduce using rule 26 (term)


State 35

   34 rop: LIST • prim

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    '('         shift, and go to state 19

    yid   go to state 20
    prim  go to state 46


State 36

   32 rop: STAR •

    $default  reduce using rule 32 (rop)


State 37

   31 rop: PLUS •

    $default  reduce using rule 31 (rop)


State 38

   33 rop: QUESTION •

    $default  reduce using rule 33 (rop)


State 39

   28 fact: prim rop •

    $default  reduce using rule 28 (fact)


State 40

   30 prim: '(' rexp ')' •

    $default  reduce using rule 30 (prim)


State 41

   16 or: OR rbody •
   17   | OR rbody • ACTION STRING

    ACTION  shift, and go to state 47

    $default  reduce using rule 16 (or)


State 42

   13 rule: IDENTIFIER OR rbody ACTION STRING • ';'
   15     | IDENTIFIER OR rbody ACTION STRING • or ';'

    OR   shift, and go to state 29
    ';'  shift, and go to state 48

    or  go to state 49


State 43

   18 or: or OR • rbody
   19   | or OR • rbody ACTION STRING

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    PIPE        shift, and go to state 18
    '('         shift, and go to state 19

    $default  reduce using rule 20 (rbody)

    yid    go to state 20
    rbody  go to state 50
    rexp   go to state 22
    term   go to state 23
    fact   go to state 24
    prim   go to state 25


State 44

   14 rule: IDENTIFIER OR rbody or ';' •

    $default  reduce using rule 14 (rule)


State 45

   24 rexp: rexp PIPE term •
   26 term: term • fact

    IDENTIFIER  shift, and go to state 10
    LITERAL     shift, and go to state 11
    '('         shift, and go to state 19

    $default  reduce using rule 24 (rexp)

    yid   go to state 20
    fact  go to state 34
    prim  go to state 25


State 46

   34 rop: LIST prim •

    $default  reduce using rule 34 (rop)


State 47

   17 or: OR rbody ACTION • STRING

    STRING  shift, and go to state 51


State 48

   13 rule: IDENTIFIER OR rbody ACTION STRING ';' •

    $default  reduce using rule 13 (rule)


State 49

   15 rule: IDENTIFIER OR rbody ACTION STRING or • ';'
   18 or: or • OR rbody
   19   | or • OR rbody ACTION STRING

    OR   shift, and go to state 43
    ';'  shift, and go to state 52


State 50

   18 or: or OR rbody •
   19   | or OR rbody • ACTION STRING

    ACTION  shift, and go to state 53

    $default  reduce using rule 18 (or)


State 51

   17 or: OR rbody ACTION STRING •

    $default  reduce using rule 17 (or)


State 52

   15 rule: IDENTIFIER OR rbody ACTION STRING or ';' •

    $default  reduce using rule 15 (rule)


State 53

   19 or: or OR rbody ACTION • STRING

    STRING  shift, and go to state 54


State 54

   19 or: or OR rbody ACTION STRING •

    $default  reduce using rule 19 (or)
